<?xml version="1.0"?>
<package format="3">
  <name>custom_costmap_layers</name>
  <version>0.0.1</version>
  <description>Custom Nav2 costmap layers (terrain / sterling integration)</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_costmap_2d plugin="${prefix}/plugins.xml"/>
  </export>
</package>